small changes,fix some ui

--- a/src/main/resources/add-book.html
+++ b/src/main/resources/add-book.html
@@ -100,7 +100,7 @@
                             <div class="card">
                                 <div class="card-header">
                                     <h4>录入书籍信息</h4>
-                                    <p class="card-desc">请在下方旋转所借阅的 <code>书籍</code> 以及对应的<code>借阅人</code></p>
+                                    <p class="card-desc">请在下方旋添加转所借阅的 <code>书籍</code> </p>
                                 </div>
                                 <div class="card-body">
                                     <form class="separate-form" method="post" action="addBook">
